# rauc-hawkbit-updater

./: .editorconfig  .gitignore  .travis.yml  .uncrustify.cfg  CHANGES  CHANGES.rst  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  config.conf.example  config.h.in  meson.build  meson.cross  meson_options.txt  pytest.ini  test-requirements.txt  uncrustify.sh
.github/workflows/: codeql.yml  tests.yml
data/: de.pengutronix.rauc.InstallConfirmation.conf  meson.build
docs/: changes.rst  conf.py  contributing.rst  index.rst  meson.build  reference.rst  release-checklist.txt  requirements.in  requirements.txt  using.rst
include/: config-file.h  hawkbit-client.h  json-helper.h  log.h  rauc-install-confirmation.h  rauc-installer.h  sd-helper.h
script/: LICENSE.0BSD  hawkbit_mgmt.py  rauc-hawkbit-updater.service  target-create
src/: config-file.c  hawkbit-client.c  json-helper.c  log.c  rauc-hawkbit-updater.c  rauc-install-confirmation.c  rauc-install-confirmation.xml  rauc-installer.c  sd-helper.c
test/: conftest.py  create_test_target  gen_key.sh  gen_pki.sh  hawkbit_mgmt.py  helper.py  install_confirm.py  mtls_conf.py  rauc-hawkbit-updater.t  rauc_dbus_dummy.py  sharness.sh  sniffer.py  soft_update_check_dbus_dummy.py  test-config-auth-token-only.conf  test-config-both-security-tokens.conf  test-config-gateway-token-only.conf  test-config-no-security-tokens.conf  test-config.conf  test_basics.py  test_cancel.py  test_download.py  test_install.py  test_mtls.py  test_requests.py  test_soft.py  wait-for-hawkbit-online
test/nginx/: base.conf.in  download_without_auth_headers.inc.in  partial.inc.in
test/pki/: client.crt  client.csr  client.key  issuer_hash.txt  root-ca.crt  root-ca.key  root-ca.srl  root-csr.pem
